[tool.poetry]
name = "bqframes"
version = "0.1.0"
description = ""
authors = ["Darsh <contact.dshukla@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
google-cloud-bigquery = "^2.32.0"
pandas = "^1.4.0"
pyarrow = "^6.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
